Fixed letter spacing.

--- a/media/css/sandstone/tabzilla.less
+++ b/media/css/sandstone/tabzilla.less
@@ -225,6 +225,7 @@
     display: block;
     padding: .4em 20px .4em 0;
     outline: 0;
+    letter-spacing: 0;
 }
 
 #tabzilla-panel a,
